# clia

./: GEMINI.md  allowed_tools  blablador.md  config-blablador.ini  config.ini  pyproject.toml  pytest.ini  start_agent.sh
clia/commands/: __init__.py  memory_cmd.py  sh_cmd.py
clia/tools/: __init__.py  recall_memory.py  save_memory.py
tests/: test_memory.py
